--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,22 +4,29 @@ version = "0.1.0"
 description = "AI-powered test automation agent"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
+packages = [
+    { include = "ai-test-agent", from = "src" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-langchain = "^0.0.312"
+langchain = "^1.0.0"
+langchain-community = "^0.4.0"
+langchain-core = "^1.0.0"
+langgraph = "^1.0.0"
 ollama = "^0.1.7"
 playwright = "^1.40.0"
 click = "^8.1.7"
 rich = "^13.6.0"
 pydantic = "^2.4.2"
+pydantic-settings = "^2.0.0"
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
 networkx = "^3.2.1"
 tree-sitter = "^0.20.2"
-tree-sitter-python = "^0.20.4"
-tree-sitter-javascript = "^0.20.1"
-tree-sitter-java = "^0.20.2"
+tree-sitter-python = "^0.25.0"
+tree-sitter-javascript = "^0.25.0"
+tree-sitter-java = "^0.23.5"
 jinja2 = "^3.1.2"
 aiofiles = "^23.2.1"
 coverage = "^7.3.2"
