--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,13 +23,14 @@ pydantic-settings = "^2.0.0"
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
 networkx = "^3.2.1"
-tree-sitter = "^0.20.2"
+tree-sitter = "^0.25.0"
 tree-sitter-python = "^0.25.0"
 tree-sitter-javascript = "^0.25.0"
 tree-sitter-java = "^0.23.5"
 jinja2 = "^3.1.2"
 aiofiles = "^23.2.1"
 coverage = "^7.3.2"
+scipy = "^1.16.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.10.1"
