--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ langchain-community = "^0.4.0"
 langchain-core = "^1.0.0"
 langgraph = "^1.0.0"
 ollama = "^0.1.7"
+prompt-toolkit = "^3.0.48"
 playwright = "^1.40.0"
 click = "^8.1.7"
 rich = "^13.6.0"
@@ -37,6 +38,7 @@ black = "^23.10.1"
 isort = "^5.12.0"
 flake8 = "^6.1.0"
 mypy = "^1.6.1"
+ruff = "^0.14.2"
 
 [build-system]
 requires = ["poetry-core"]
